---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    - Added a live-updating list of module effects to the machine and beacon dialogs
  Changes:
    - Moved a couple of preferences from the production frame to the preferences dialog
    - Simplified indentation visuals for folded out subfloors
    - Re-arranged the preferences dialog slightly
  Bugfixes:
    -

---------------------------------------------------------------------------------------------------
Version: 1.1.64
Date: 30. 04. 2023
  Features:
    - Added the ability to shift subfactories and recipes by 5 spots
  Changes:
    - Limited beacon amount to 1 when using the mod with Space Exploration
    - Changed exact machine limits to default to being enabled
  Bugfixes:
    - Fixed space science not showing up at all

---------------------------------------------------------------------------------------------------
Version: 1.1.63
Date: 29. 04. 2023
  Features:
    - Subfactories can now be duplicated from the archive, placing them into the main list
  Changes:
    - Redesigned the subfactory info box slightly
    - Made the game pause button more obvious in the UI
    - Removed the amount indication on machines and fuels in the machine dialog
  Bugfixes:
    - Fixed an issue where items were showing the wrong recipes to produce them sometimes, leading to crashes
    - Fixed a bug where module effects were not updated straight away when changing a machine or beacon type
    - Fixed that putting top level ingredients into the cursor would not respect the 'show floor items' preference
    - Fixed that machine energy drain was generating pollution when it shouldn't be
    - Fixed that a recipe's priority product was not always retained properly
    - Fixed that certain Exotic Industries recipes would not be usable until researched
    - Fixed duplicate machines being detected in Industrial Revolution 3
