@@ -4,6 +4,7 @@ Date: 00. 00. 0000
   Features:
     - Added a live-updating list of module effects to the machine and beacon dialogs
   Changes:
+    - Extended the overload beacon detection to a couple more mods (Thanks ctgPi!)
     - Moved a couple of preferences from the production frame to the preferences dialog
     - Simplified indentation visuals for folded out subfloors
     - Re-arranged the preferences dialog slightly
